--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import AsideMenu from '../components/AsideMenu.astro'
 interface Props {
 	title: string;
 }
@@ -18,11 +19,14 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<div id="app" class="relative h-screen p-2 gap-2 ">
-			<aside class="[grid-area:aside] flex-col flex overflow-y-auto bg-blue-300">
-				ASIDE
+			<div class="[grid-area:header] flex flex-col overflow-y-auto min-h-[100px] max-h-[100px]">
+				haqe
+			</div>
+			<aside class="[grid-area:aside] flex-col flex overflow-y-auto ">
+				<AsideMenu />
 			</aside>
-			<main class="[grid-area:main] bg-yellow-200"></main>
-			<footer class="[grid-area:player] min-h-[100px]"></footer>
+			<main class="[grid-area:main] bg-zinc-900 overflow-y-auto "></main>
+			<footer class="[grid-area:player]min-h-[100px]"></footer>
 			
 		</div>
 	</body>
@@ -31,6 +35,7 @@ const { title } = Astro.props;
 	#app{
 		display: grid;
 		grid-template-areas: 
+		"header header header"
 		"aside main main"
 		"player player player";
 		grid-template-columns: 350px 1fr;
