Se comenta codigo para ser agragado en el navbar

--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -5,7 +5,7 @@ import HomeIcon from '../icons/Home.astro'
 import Search from "../icons/Search.astro";
 ---
 <nav class="flex flex-col flex-1 gap-2">
-    <div class="bg-zinc-900 rounded-lg p-2">
+    <!-- <div class="bg-zinc-900 rounded-lg p-2">
         <ul>
             <SideMenuItem href="/" >
                 <HomeIcon />
@@ -16,7 +16,7 @@ import Search from "../icons/Search.astro";
                 Buscar
             </SideMenuItem>
         </ul>
-    </div>
+    </div> -->
     <div class="bg-zinc-900 rounded-lg p-2 flex-1">
         <ul>
 
